# pdf_service

./: .dockerignore  .env.example  Docker-README.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/api/: routes.py
app/core/: config.py
app/models/: __init__.py  models.py
app/services/: __init__.py  llm_service.py  pdf_service.py
data/: contacts.json  generate-data.py  properties.json
tests/: test_api.py
